# zotero-mcp-enhanced

./: .gitignore  LICENSE  NOTICE.md  README.md  stored-attachment-poc-0.7.2-macfix.xpi  test-mcp-e2e.py
docs/: GITHUB-RELEASE-NOTES.md  INSTALL.md  MACOS-LAUNCHD-MCP-SERVICE.md  MCP-SERVICE-STEP-BY-STEP.md  STANDALONE-MCP-SERVICE.md  codex-mcp-config-python.example.json  codex-mcp-config.example.json
mcp-service/: build-standalone.ps1  pyproject.toml  standalone_entry.py
mcp-service/docs/: ZOTERO-MCP-TOOLS-DESIGN.md
mcp-service/scripts/: create_bookmarked_pdf.py  create_highlight_from_quote.py  create_zotero_annotation.py  probe_abbyy.ps1  probe_ocrmypdf.ps1  smoke_test.py
mcp-service/src/abbyy_mcp/: abbyy_runner.py  bookmarks.py  config.py  job_store.py  main.py  pdf_service.py  runner.py  server.py  service.py
mcp-service/src/zotero_mcp_enhanced_service/: __init__.py  config.py  main.py  models.py  ocrmypdf_runner.py  server.py  service.py  zotero_queue.py
mcp-service/tests/: test_abbyy_runner_contract.py  test_bookmarks.py  test_config.py  test_create_highlight_from_quote.py  test_create_zotero_annotation.py  test_job_store.py  test_ocrmypdf_runner_contract.py  test_runner_stub.py  test_server.py  test_service.py  test_standalone_packaging.py  test_writeback_from_search_locator.py  test_zotero_note_deeplink.py
ops/launchd/: com.brigealong.zotero-mcp-enhanced-service.plist
plugin/: bootstrap.js  build-plugin.ps1  manifest.json  prefs.js  update.json
plugin/content/: preferences.xhtml
scripts/: check-zotero-mcp-service.sh  start-zotero-mcp-service.sh
(+22 files in other folders)
