[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-mcp-enhanced-service"
version = "0.1.0"
description = "MCP service packaging and startup layer for zotero-mcp-enhanced with optional open-source OCR runners."
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.27.0",
  "pypdf>=5.4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
zotero-mcp-enhanced-service = "zotero_mcp_enhanced_service.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
